--- a/project/autosalon/templates/autosalon/detail.html
+++ b/project/autosalon/templates/autosalon/detail.html
@@ -1,54 +1,22 @@
-{% load static %}
+{%extends 'base.html'%}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{ car.title }} - AutoSalon</title>
 
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-  <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/9.1.0/mdb.min.css" rel="stylesheet"/>
-</head>
-<body>
+{%block title%}
+{{title}}
+{%endblock title%}
 
-<div class="container mt-5 mb-5">
-  <div class="row">
-    <!-- Left: Brandlar -->
-    <div class="col-3">
-      {% for brand in brands %}
-        <a href="{% url 'by_brand' brand.id %}"
-           class="list-group-item list-group-item-action px-3 border-0 fs-5"
-           data-mdb-ripple-init>
-          {{ brand.name }}
-        </a>
-      {% endfor %}
-    </div>
+
+
+{%block content%}
+      <div class="col-3">
+        {%include 'autosalon/components/_list_group.html'%}
+      </div>
 
     <!-- Right: Car detail -->
     <div class="col-8">
       <div class="card">
-        {% if car.image %}
-          <img src="{{ car.image.url }}" class="card-img-top" alt="{{ car.title }}" style="height:400px; object-fit:cover;"/>
-        {% endif %}
-        <div class="card-body">
-          <h3 class="card-title">{{ car.title }}</h3>
-          <p class="card-text">{{ car.description }}</p>
-          <p><b>Brand:</b> {{ car.brand.name }}</p>
-          <p><b>Created:</b> {{ car.created }}</p>
-        </div>
-        <div class="card-footer">
-          <a href="/" class="btn btn-primary">⬅ Back to list</a>
-        </div>
+        {%include 'autosalon/components/_card.html'%}
       </div>
     </div>
-  </div>
-</div>
+{%block content%}
 
-<!-- MDB -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/9.1.0/mdb.umd.min.js"></script>
-</body>
-</html>
